# seg

./: .gitignore  main.py  pyproject.toml
src/config/: segqformer.toml
src/datasets/: __init__.py  base_dataset.py  gis_dataset.py
src/datasets/utils/: get_data.py
src/model/: __init__.py
src/model/SegQFormer/: config.json  configuration_SegQFormer.py  image_processing_SegQFormer.py  modeling_SegQFormer.py  preprocessor_config.json
src/train/: eval.py  train.py  train_init_weight.py  trainer_SegQFormer.py
src/utils/: arguments.py
